@@ -372,6 +372,7 @@
 "Quit":"Afslut",
 "Radio":"Radio",
 "Random":"Tilfældig",
+"Random Albums":"Miks baseret på tilfældige album",
 "Random Mix":"Tilfældig miks",
 "Random Releases":"Tilfældige udgivelser",
 "Random mix":"Tilfældig miks",
