@@ -366,6 +366,7 @@
 "Quit":"Beenden",
 "Radio":"Radio",
 "Random":"Zufällig",
+"Random Albums":"Zufällige Alben",
 "Random Mix":"Zufällige Wiedergabe",
 "Random Releases":"Zufällige Veröffentlichungen",
 "Random mix":"Zufällige wiedergabe",
