@@ -372,6 +372,7 @@
 "Quit":"Quitter",
 "Radio":"Radio",
 "Random":"Aléatoire",
+"Random Albums":"Albums aléatoires",
 "Random Mix":"Morceaux au hasard",
 "Random Releases":"Albums aléatoires",
 "Random mix":"Morceaux au hasard",
