@@ -346,6 +346,7 @@
 "Quit":"Kilépés",
 "Radio":"Rádió",
 "Random":"Véletlen",
+"Random Albums":"Véletlen albumok",
 "Random Mix":"Véletlen Mix",
 "Random Releases":"Véletlen kiadások",
 "Random mix":"Véletlen kevert lejátszási lista",
