@@ -151,6 +151,7 @@
 "Power on all upon play":"Attiva tutto alla riproduzione",
 "Power on/off all":"Attiva/disattiva tutto",
 "Queue":"Coda di riproduzione",
+"Random Albums":"Album casuali",
 "Random Mix":"Mix casuale",
 "Random mix":"Mix casuale",
 "Rating":"Voto",
