@@ -368,6 +368,7 @@
 "Quit":"Выход",
 "Radio":"Радио",
 "Random":"Произвольно",
+"Random Albums":"Произвольные альбомы",
 "Random Mix":"Произвольный микс",
 "Random Releases":"Случайный релиз",
 "Random mix":"Произвольный микс",
