@@ -720,6 +720,7 @@
 "Moving clock":"",
 "No screensaver.":"",
 "Play selection shuffled":"",
+"Random Albums":"",
 "Scrollable lists":"",
 "The order of 'Scrollable list' items can be changed, here, by drag and drop.":"",
 "Type":"",
